objects/QIDC__Validation_Request_Required_Fields_ims__c.object
<CustomObject>
    <description>Used to store the Validation Requests required fields.</description>
    <fields>
        <fullName>QIDC__Activity_Required_Fields_ims__c</fullName>
        <label>Activity Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Country_ISO_Code_ims__c</fullName>
        <label>Country ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_Required_Fields_ims__c</fullName>
        <label>Workplace Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Validation Request Required Fields</label>
    <nameField>
        <label>Validation Request Required Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validation Request Required Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>